Actual fix to z-index

--- a/resources/css/wasd.css
+++ b/resources/css/wasd.css
@@ -4915,6 +4915,7 @@ a.navbar-item {
   width: fit-content;
   margin: 0 auto;
   font-size: 1.2em;
+  z-index: 10;
   text-align: center; }
   .descriptor-box .backing {
     margin-bottom: 20px; }
