--- a/src/stylesheet/sass/section/_hero.scss
+++ b/src/stylesheet/sass/section/_hero.scss
@@ -84,6 +84,7 @@
   // margin-top: -170px;
   // margin-bottom: 50px;
   font-size: 1.2em;
+  z-index: 10;
 
   & .backing {
     margin-bottom: 20px;
